# spark-pipeline

./: .gitignore  LICENSE  Pipfile  README  README.md  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test.yml
demo/: datadiff.ipynb  histogram-generation.ipynb  score-sklearn.ipynb  score_sklearn.py
doc/: distributed-prediction.pptx
sparktools/: core.py  datadiff.py  metrics.py  mover.py  scorer.py  simple_model.py  test_score.py  trainer.py
tests/: test_score.py
